--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -26,25 +26,35 @@
 }
 
 .myActiveClass {
-    background-color: teal;
+    padding: 5px;
+    background-color: skyblue;
     font-weight: bolder;
-    color: yellow;
-    text-decoration: underline;
+    color: rgb(61, 59, 59);
+    text-decoration: none;
+    box-shadow: 12px 12px 16px 0 rgba(255, 255, 255, 0.3), -8px -8px 12px 0 rgba(0, 0, 0, 0.25);
 }
 
 .contact {
-    background-color: rgb(228, 20, 20);
+    background-color: black;
     padding: 2px 20px;
     border-radius: 20px;
-    .links {
+    color: whitesmoke;
+    box-shadow: 12px 12px 16px 0 rgba(255, 255, 255, 0.3), -8px -8px 12px 0 rgba(0, 0, 0, 0.25);
+    .contact-myActiveClass {
         color: whitesmoke;
+        background-color: none;
+        text-decoration: none;
+    }
+    .myNotActiveClass {
+        color: whitesmoke;
+        text-decoration: none;
     }
     &:hover {
         transform: scale(1.1);
     }
 }
 
-.links {
+.myNotActiveClass {
     color: black;
     text-decoration: none;
 }
